# pymaml

./: delete.maml  maml.py  parse.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pymaml/: __init__.py  maml.py  model_v1p0.py  model_v1p1.py  read.py
tests/: __init__.py  example.maml  example_markdown_v1p0.md  example_markdown_v1p1.md  example_three.yml  example_two.maml  example_v1p0.maml  example_v1p1.maml  invalid.maml  test_base_models.py  test_maml.py  test_parse.py  test_read.py
