[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymaml"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "TrystanScottLambert", email = "trystanscottlambert@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pyaml", "rich", "astropy"]

[project.urls]
Documentation = "https://github.com/TrystanScottLambert/pymaml#readme"
Issues = "https://github.com/TrystanScottLambert/pymaml/issues"
Source = "https://github.com/TrystanScottLambert/pymaml"

[tool.hatch.version]
path = "src/pymaml/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pymaml tests}"

[tool.coverage.run]
source_pkgs = ["pymaml", "tests"]
branch = true
parallel = true
omit = [
  "src/pymaml/__about__.py",
]

[tool.coverage.paths]
pymaml = ["src/pymaml", "*/pymaml/src/pymaml"]
tests = ["tests", "*/pymaml/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
