[project]
name = "pymaml"
version = "0.6.3"
description = "Python reader, writer and validator for Meta yAML (MAML)."
readme = "README.md"
authors = [
    { name = "TrystanScottLambert", email = "trystanscottlambert@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.1.0",
    "pandas>=2.3.2",
    "pyaml>=25.7.0",
    "rich>=14.1.0",
    "twine>=6.1.0",
    "polars>=1.35.1",
    "yaml-to-markdown>=0.1.1744598339",
    "pydantic>=2.12.5",
]
license = "MIT"

[project.scripts]
pymaml = "pymaml:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
